--- a/main.html
+++ b/main.html
@@ -7,10 +7,12 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<!-- the entibody must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+	<p id="yellow">Paragraph-1</p>
+<p id="red">Paragraph-2</p>
+	<p id="green">Paragarph-3</p>
 </body>
 
 </html>
